[gd_scene load_steps=6 format=2]

[ext_resource path="res://Enemies/Enemy.gd" type="Script" id=1]
[ext_resource path="res://CollisionBoxes/Hurtbox.tscn" type="PackedScene" id=2]
[ext_resource path="res://CollisionBoxes/Hitbox.tscn" type="PackedScene" id=3]
[ext_resource path="res://Enemies/EnemyStats.tscn" type="PackedScene" id=4]
[ext_resource path="res://CollisionBoxes/Viewbox.tscn" type="PackedScene" id=5]

[node name="Enemy" type="KinematicBody2D"]
collision_layer = 0
collision_mask = 2
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]

[node name="Collider" type="CollisionShape2D" parent="."]

[node name="SpriteAnimator" type="AnimationPlayer" parent="."]

[node name="Hurtbox" parent="." instance=ExtResource( 2 )]
collision_layer = 8

[node name="Hitbox" parent="." instance=ExtResource( 3 )]
collision_mask = 4

[node name="EnemyStats" parent="." instance=ExtResource( 4 )]

[node name="Viewbox" parent="." instance=ExtResource( 5 )]
collision_mask = 16

[node name="Collider" parent="Viewbox" index="0"]
position = Vector2( 0.250282, 0.260654 )
scale = Vector2( 1.72421, 1.28 )

[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="enemy_died" from="EnemyStats" to="." method="_on_EnemyStats_enemy_died"]
[connection signal="area_entered" from="Viewbox" to="." method="_on_Viewbox_area_entered"]

[editable path="Viewbox"]
